force-app/main/default/objects/Priority__c/Priority__c.object-meta.xml
<CustomObject>
    <label>Priority</label>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Priority Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Priorites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>