force-app/main/default/objects/Priority__c/fields/Resolution_Duration__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Duration__c</fullName>
    <label>Resolution Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>