force-app/main/default/objects/Priority__c/fields/Response_Duration__c.field-meta.xml
<CustomField>
    <fullName>Response_Duration__c</fullName>
    <label>Response Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>